--- a/index/style.css
+++ b/index/style.css
@@ -27,24 +27,27 @@ html, body {
 
 nav{
   background: rgba(245,222,179, 0.95);
-  border-color: rgba(255,255,255,.3);
+  border-color: rgba(255,255,255,0.3);
 }
-.container-fluid p {
+/*.container-fluid p {
   animation-duration: 3s;
   animation-name: slidein;
   animation-iteration-count: infinite;
   padding: 50px;
   margin: 250px;
 
-}
+}*/
+
+
 section {
     padding: 100px 0;
+    margin: auto;
   }
 
 .header-content-inner h1 {
   text-align: center;
   color: white;
-  font-size:50px;
+  font-size:40px;
   margin: 100px;
   font-family: 'ZCOOL XiaoWei', serif;
 
@@ -52,7 +55,7 @@ section {
 .header-content-inner p {
   text-align: center;
   font-size:15px;
-  color: white;
+  color: wheat;
   font-family: 'ZCOOL XiaoWei', serif;
 }
 .navbar-brand {
