--- a/index/style.css
+++ b/index/style.css
@@ -19,22 +19,24 @@ body . navbar {
 
 }
 
-.bg-secondary {
-  background-color: wheat;
-}
 
 html, body {
     width: 100%;
     height: 100%;
 }
-.container-fluid {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
 
+.navbar-toggle {
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
 }
-
 
 nav{
   background: rgba(216, 76, 95, 1);
@@ -54,6 +56,7 @@ nav{
 section {
     padding: 100px 0;
     margin: auto;
+
   }
 
 .header-content-inner h1 {
@@ -66,6 +69,15 @@ section {
   border-width:6px;
   border-style: double;
 
+
+}
+div . header-content-inner {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  background-color: red;
+  animation-name: example;
+  animation-duration: 4s;
 }
 .header-content-inner p {
   text-align: center;
@@ -121,9 +133,22 @@ section {
 
 .fa-facebook {
   background: #3B5998;
-  color: white;
+
 }
 
+
+   /* margin-bottom: 60px;
+   display: block;
+   margin-left: 40%;
+   width: 500px;
+   background: #606060;
+   color: #ffffff;
+   text-align: center;
+   font-weight: bold;
+   font-size: 30px;
+   border-radius: 20px;"
+
+} */
 /* #competences  {
   background-color: rgba(137, 96, 37, 0) !important;
 }
@@ -153,6 +178,9 @@ section {
 }
 
 .fa:hover {
-  opacity: 0.7;
-  background-color: wheat;
+  background-color: ;
+}
+;row {
+  marging-right:40px;
+
 }
