--- a/index/style.css
+++ b/index/style.css
@@ -107,6 +107,7 @@ div . header-content-inner {
   font-family: 'ZCOOL XiaoWei', serif;
   color: #1C4656;
   font-size: 30px;
+  color: wheat;
 
 }
 .num {
@@ -159,7 +160,7 @@ div . header-content-inner {
   flex-direction: column;
   align-items: center;
   display: flex;
-  color: white;
+  color: #1C4656;
   font-size: 20px;
   font-family: 'ZCOOL XiaoWei', serif;
 }
@@ -174,11 +175,10 @@ div . header-content-inner {
   font-size: 30px;
   text-align: center;
   text-decoration: none;
-  padding-left: 4%;
+  padding-left:
 }
 
-.fa:hover {
-  background-color: ;
+
 }
 ;row {
   marging-right:40px;
