--- a/index/style.css
+++ b/index/style.css
@@ -7,11 +7,23 @@ body {
   font-family: 'ZCOOL XiaoWei', serif;
 
 }
+hr {
+  max-width: 50px;
+  border-width: 9px;
+  border-top: 1px solid ;
+  margin: 30px auto;;
+}
 
 p {
     margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.5;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
 }
 
 body . navbar {
@@ -25,6 +37,18 @@ html, body {
     height: 100%;
 }
 
+.btn-xl {
+    padding: 15px 30px;
+}
+
+btn {
+    border: 0;
+    border-radius: 300px;
+    text-transform: uppercase;
+    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    font-weight: 700;
+}
+
 .navbar-toggle {
     position: relative;
     float: right;
@@ -34,7 +58,7 @@ html, body {
     margin-bottom: 8px;
     background-color: transparent;
     background-image: none;
-    border: 1px solid transparent;
+    border: 1px solid black;
     border-radius: 4px;
 }
 
