--- a/index/style.css
+++ b/index/style.css
@@ -131,7 +131,7 @@ div . header-content-inner {
   font-family: 'ZCOOL XiaoWei', serif;
   color: #1C4656;
   font-size: 30px;
-  color: wheat;
+  color: ;
 
 }
 .num {
