--- a/css/style.css
+++ b/css/style.css
@@ -15,19 +15,19 @@ hr {
 }
 
 p {
-    margin-bottom: 20px;
-    font-size: 16px;
-    line-height: 1.5;
+    margin-bottom: 100%;
+    font-size: 1em;
+    line-height: 1.5em;
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    margin-inline-start: 0em;
+    margin-inline-end: 0em;
 }
 }
 
 body .navbar {
-  padding-top: 30px;
+  padding-top: 1.875em;
 
 }
 
@@ -37,9 +37,6 @@ html, body {
     height: 100%;
 }
 
-.btn-xl {
-    padding: 15px 30px;
-}
 
 .btn  a {
     border: 0;
@@ -49,9 +46,9 @@ html, body {
     background: #961108;
     color: #ffffff;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 1.250em;
     font-family: Arial;
-    border-radius: 30px;
+    border-radius: 1.875em;
 }
 
 .navbar-toggle {
@@ -85,10 +82,10 @@ nav{
 }*/
 
 
-section {
+/* section {
   padding: 100px 0;
   margin: auto;
-}
+} */
 
 .header-content {
   padding-top: 100px;
