--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 
-  background: url("https://wallpaperaccess.com/full/279681.jpg") no-repeat top center fixed  ;
+  background: url("http://www.nova.fr/sites/default/files/ressources/images/blur-1853305_960_720.jpg") no-repeat top center fixed  ;
   background-size: cover;
   width: 100%;
   height: 250px;
@@ -43,7 +43,7 @@ html, body {
     border-radius: 300px;
     font-family: 'ZCOOL XiaoWei', serif;
     display: block;
-    background: #961108;
+    background: #2F3977;
     color: #ffffff;
     font-weight: bold;
     font-size: 1.250em;
