--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,7 @@ html, body {
     border: 0;
     border-radius: 300px;
     font-family: 'ZCOOL XiaoWei', serif;
-    display: block;
-    background: #463F47;
+    background: #769C28;
     color: #ffffff;
     font-weight: bold;
     font-family: Arial;
@@ -93,7 +92,7 @@ nav{
 .header-content-inner h1 {
   text-align: center;
   color: black;
-  font-size:70px;
+  font-size:4rem;
   font-family: 'ZCOOL XiaoWei', serif;
   border-color: #7ee7e3 ;
   font-weight: bold;
@@ -101,20 +100,11 @@ nav{
 
 
 }
-/* div . header-content-inner {
-  width: 100px;
-  height: 100px;
-  position: relative;
-  background-color: red;
-  animation-name: example;
-  animation-duration: 4s;
-} */
-
 
 .header-content-inner p {
   text-align: center;
-  font-size:30px;
-  color: wheat;
+  font-size:2.5rem;
+
   font-family: 'ZCOOL XiaoWei', serif;
 }
 
@@ -209,9 +199,9 @@ nav{
 }
 .text {
   font-size: 20px;
-  color: #1C4656;
+  /* color: #1C4656; */
   font-family: 'ZCOOL XiaoWei', serif;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 .wrapper {
@@ -219,4 +209,9 @@ nav{
   text-align: center;
   text-decoration: none;
   color: #961108;
+}
+
+.blop {
+  padding-bottom: 1rem;
+
 }
