--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-
+  background-image: url(https://images.wallpaperscraft.com/image/laptop_room_on_the_desk_keyboard_mouse_apple_window_interior_73963_1920x1080.jpg);
   background-color: black;
 
   font-family: 'ZCOOL XiaoWei', serif;
