--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   cursor: default;
 
 }
-html, body, div, span,img , h1, h2, h3, h4, h5, h6, p , pre, a, abbr, small, strong, i , center ,footer, header, menu, nav, ul , li , section {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video{
   margin: 0;
   padding: 0;
   border: 0;
@@ -32,7 +32,6 @@ html, body, div, span,img , h1, h2, h3, h4, h5, h6, p , pre, a, abbr, small, str
     display: inline-block;
     margin: 0 5px;
     text-align: center;
-    vertical-align: top;
 }
 
 
@@ -410,6 +409,16 @@ div {
 .clear {
     clear: both;
 }
+.brp {
+  flex-basis: inherit;
+
+  display: grid;
+}
+.brpp{
+  flex-basis: inherit;
+  display: grid;
+
+}
 
 .txt-center {
     text-align: center;
@@ -509,7 +518,7 @@ ol, ul {
     margin-bottom: 40px;
 }
 .icon-contact {
-    border: 10px solid #677273;
+  border: 10px solid #677273;
 }
 
 .bg-orange {
