--- a/css/style.css
+++ b/css/style.css
@@ -348,8 +348,8 @@ section, .section {
 }
 .iconn{
   color: lightgray;
-  display: inline-block;
-  margin-top: -50px;
+  border-color: #E67E22;
+  border-color: ;
   width: 100px;
   font-size: 300%;
   padding: 10px;
@@ -577,6 +577,15 @@ a {
 .blop {
   padding-bottom: 1rem;
 
+}
+
+footer{
+  background-color: #677273;
+}
+
+footer h5 {
+  color: wheat;
+  font-size: 20px;
 }
 
 .sticky {
